<resources>

<!--strings from navdrawer activity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_register">Register</string>
    <string name="menu_wall">Wall</string>
    <string name="menu_login">Log In</string>
    <string name="menu_contacts">Contacts</string>

    <string name="app_name">Gamers Connect</string>
    <string name="email">E-mail:</string>
    <string name="Password">Password:</string>
    <string name="Offertext">Not signed up yet? Register.</string>
    <string name="registertext">Register</string>
    <string name="pass_again">Password again:</string>

    <!-- Viewpager titles-->
    <string name="title_log_in">Log In</string>
    <string name="title_register">Register</string>
    <string name="title_wall">Wall</string>

    <!--Wall strings-->
    <string name="expected_date">Expected Date</string>
    <string name="place">Venue/Link</string>
    <string name="description">Description</string>
    <string name="new_post">New</string>
    <string name="send_text">Send</string>
    <string name="search_contact">Search</string>
    <string name="required">This field is required.</string>


    <!-- strings for recyclerview test -->
    <string name="testText1">sbdgoiebévtitbeasbdgoiebévtitbeasbdgoiebévtitb easbdgoiebévtitbeasbdgoiebévtitbeasbdg  oiebévtitbeasbdgoiebévtitbeasbdgoiebévtitbea</string>
    <string name="testText2">sbdgoiebévtitsbdgoiebévtitbeasb dgoiebévtitbeasbdgoiebévtitbeasbdgoiebévtitb easbdgoiebévtitbeabea</string>
    <string name="testText3">sbdgoiebévtitbsbdgoieb évtitbeasbdgoiebévtitbeasbdgoiebévtitbeasbdgoiebévtit beasbdgoiebévtitbeasbdgoiebévtitbeaea</string>
    <string name="testText4">sbdgoiebévtitbsbdgoiebé vtitbeasbdgoiebévtitbeasbdgoi ebévtitbeasbdgoiebévtitbeas bdgoiebévtitbeaea</string>
    <string name="testText5">sbdgoiebévtitbsbdgoiebévt itbeasbdgoiebévtitbeasbdgoiebé vtitbeasbdgoiebévtitbeasbdg oiebévtitbeaea</string>
    <string name="testText6">sbdgoiebévtisbdgoiebévtitb easbdgoiebévtitbeasbdgoiebévtit b easbdgoiebévtitbeasbdgoiebévtitbeasbdgoiebév titbeasbdgoiebévtitbeatbea</string>
    <string name="testText7">sbdgoiebévtitbeasbdgo iebévtitbeasbdgoiebévtitbea sbdgoiebévtitbeasbdgoiebév titbeasbdgoiebévtitbeasbdgoiebév titbea</string>
    <string name="testText8">sbdgoiebévtitbeasbdgoi ebévtitbeasbdgoiebévtitbeasbdgoiebé vtitbeasbdgoiebévtitbeasbdgoiebévt itbeasbdgoiebévtitbea</string>
    <string name="testText9">sbdgoiebévtitbeasbdgoiebévtitbea sbdgoiebévtitbeasb dgoiebévtitbeasbdgo iebévtitbeasbdgoiebévtit bea</string>
    <string name="testText10">sbdgoiebévtitbes bdgoiebévtitbeasbdgoi ebévtitbeasbdgoiebévtitbeasbdgoi ebévtitbeasbdgoiebévti tbeasbdgoiebévtitbeaa</string>
    <string name="testText11">sbdgoiebévtitbesbdg oiebévtitbeasbdgoiebévtitbeasb dgoiebévtitbeasbdgo iebévtitbeasbdgoiebévtitbea sbdgoiebévtitbeaa</string>
    <string name="testText12">sbdgoiebévtitbesbdgo iebévtitbeasb dgoiebévtitbe asbdgoiebévtitbe asbdgoiebé vtitbeaa</string>
    <string name="testText13">sbdgoiebévtitbesbdgo iebévtitbeasbdgoie bévtitbeasbdgoie bévtitbeasbdgo iebévtitbeasbdgoiebé vtitbeasbdgoiebévtitbeaa</string>
    <string name="testText14">sbdgoiebévtitbeasbdg oiebévtitbeasbdgoieb évtitbeasbdgoi ebévtitbeasbdgoiebévtitbeas bdgoiebévtitbea</string>
    <string name="testText15">sbdgoiebévtit besbdgoiebévtitbea sbdgoiebévtitbea sbdgoiebévtitbeaa</string>
    <string name="testText16">sbdgoiebévtitb esbdgoiebévtitbeasbd goiebévtitbeasbdgoi ebévtitbeasbdgoiebévti tbeasbdgoiebévtitbeaa</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>

    <string-array name="testTexts">
        <item>@string/testText1</item>
        <item>@string/testText2</item>
        <item>@string/testText3</item>
        <item>@string/testText4</item>
        <item>@string/testText5</item>
        <item>@string/testText6</item>
        <item>@string/testText7</item>
        <item>@string/testText8</item>
        <item>@string/testText9</item>
        <item>@string/testText10</item>
        <item>@string/testText11</item>
        <item>@string/testText12</item>
        <item>@string/testText13</item>
        <item>@string/testText14</item>
        <item>@string/testText15</item>
        <item>@string/testText16</item>
    </string-array>
</resources>

